[tool.poetry]
name = "imageproc"
version = "0.1.0"
description = ""
authors = ["Daniël van Adrichem <daniel5gh@spiet.nl>"]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1"
tqdm = "^4.66.1"
psutil = "^5.9.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
jupyterlab = "^4.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imageproc_measure = "imageproc.entrypoints:measure"
